# EV-DSS

./: .gitignore  LICENSE  README.md  start.bat
ev-ddss/: .env.example  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
ev-ddss/backend/: __init__.py  logger.py
ev-ddss/backend/api/: __init__.py  health.py  (+2 more)
ev-ddss/config/: config.py  config.yaml
ev-ddss/database/: __init__.py  base.py  connection.py  models.py  qdrant.py  session.py
ev-ddss/ingestion/: __init__.py  models.py
ev-ddss/processing/: __init__.py  engine.py  pipeline_intelligence.py  report.py  validation.py
ev-ddss/reasoning/: __init__.py  config.py  context_optimizer.py  engine.py  intent_classifier.py  prompt_builder.py  response_parser.py  template_manager.py  token_estimator.py
ev-ddss/retrieval/: __init__.py  chunking.py  embeddings.py  engine.py  graph_index.py  image_index.py  json_search.py  models.py  pipeline.py  selection.py  sql_index.py  vector_index.py
ev-ddss/scripts/: run.ps1  run.sh  setup.ps1  setup.sh
ev-ddss/tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_database.py  test_enrichment.py  test_ingestion.py  test_logging.py  test_pipeline_intelligence.py  test_processing.py  test_qdrant.py  test_reasoning.py  test_retrieval.py  test_validation.py
ev-ddss/validation/: citation_validator.py  confidence_breakdown.py  confidence_engine.py  config.py  consistency_checker.py  engine.py  entity_validator.py  evidence_validator.py  hallucination_detector.py  metrics.py  relationship_validator.py  report_builder.py  safety_validator.py  validation_context.py  validator.py
(+204 files in other folders)
